--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>usuários</h1>
+        <h1>Fundamentos da web, e estruturação de interfaces:</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -15,9 +15,30 @@
                 <li><a href="Cadastro.html">cadastro</a></li>
             </ul>
         </nav>
+    </header> 
+    <main>
+        <section>
+            <h2>Experiência Prática I:</h2>
+            <p>Objetivos:</p>
+            <img src="imagens/progamaçao.jpg" alt="Formar Profissionais na Web.">
+        </section>
+        
+        <section>
+            <h2>Com qualidade e velocidade na hora do trabalho!</h2>
+            <p>Fazendo com que as oportunidades cresçam no mercado no mercado.</p>
+        </section>
 
-
-    </header>     
-    
+        <section>
+            <h2>Contato com a Cruzeiro do Sul Educacional:</h2>
+            <address>
+                <p>Endereço: Rua João Afredo, 123 - Bairro Santo Amaro - São Paulo/SP</p>
+                <p>Telefone: (11) 91234-5678</p>
+                <p>Email: Cruzeirodosuled123@gmail.com</p>
+            </address>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Feito pelo Est.Kelvin</p>
+    </footer>
 </body>
 </html>
