--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main>
         <section>
             <h2>Experiência Prática I:</h2>
-            <p>Objetivos:</p>
-            <img src="imagens/progamaçao.jpg" alt="Formar Profissionais na Web.">
+            <p>Objetivo: Formar Profissionais na Web.</p>
+            <img src="imagens/imagem p.jpg" width="300px" height="200px">
         </section>
         
         <section>
             <h2>Com qualidade e velocidade na hora do trabalho!</h2>
-            <p>Fazendo com que as oportunidades cresçam no mercado no mercado.</p>
+            <p>Fazendo com que as oportunidades cresçam no mercado.</p>
         </section>
 
         <section>
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Feito pelo Est.Kelvin</p>
+        <p>&copy; 2025 Cursos Profissionalizante.</p>
     </footer>
 </body>
 </html>
