--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Cruzeirodosuled123</p>
+        <p>&copy; 2025 Cruzeirodosul Curos Proficionalizantes</p>
     </footer>
 </body>
 </html>
